docs: require postgresql version 15 (#11806)
* require-version-15

* Apply suggestions from code review

Co-authored-by: April I. Murphy <36110273+aimurphy@users.noreply.github.com>

---------

Co-authored-by: April I. Murphy <36110273+aimurphy@users.noreply.github.com>

--- a/docs/docs/Develop/configuration-custom-database.mdx
+++ b/docs/docs/Develop/configuration-custom-database.mdx
@@ -13,7 +13,7 @@ Langflow can more efficiently handle multiple users and larger workloads by usin
 
 ## Prerequisites
 
-- A [PostgreSQL](https://www.pgadmin.org/download/) database
+- A [PostgreSQL](https://www.pgadmin.org/download/) database version 15 or later
 
 ## Connect Langflow to a local PostgreSQL database
 
