--- a/docs/docs/Develop/enterprise-database-guide.mdx
+++ b/docs/docs/Develop/enterprise-database-guide.mdx
@@ -23,7 +23,7 @@ For more information, see [Configure an external PostgreSQL database](/configura
 
 1. Set up PostgreSQL:
 
-   1. Deploy a PostgreSQL instance (version 12 or higher recommended) using a local server, Docker, or a managed cloud service.
+   1. Deploy a PostgreSQL instance (version 15 or later) using a local server, Docker, or a managed cloud service.
    2. Create a database for Langflow.
    3. Create a PostgreSQL user with appropriate, minimal permissions to manage and write to the database, such as CREATE, SELECT, INSERT, UPDATE, DELETE on your Langflow tables.
 
