--- a/docs/docs/Support/troubleshooting.mdx
+++ b/docs/docs/Support/troubleshooting.mdx
@@ -169,6 +169,21 @@ This error occurs because `asyncpg` has stricter timezone handling than `psycopg
 
 To resolve this issue, remove `asyncpg` from your installation and use `psycopg2` instead.
 
+### PostgreSQL version mismatch: `UNIQUE NULLS DISTINCT` syntax error
+
+The following error can occur when initializing Langflow with a PostgreSQL database:
+
+```text
+(psycopg.errors.SyntaxError) syntax error at or near "NULLS"
+LINE 13:  CONSTRAINT file_name_user_id_key UNIQUE NULLS DISTINCT (nam...
+```
+
+This occurs when you're using a PostgreSQL version prior to version 15.
+These versions don't support the `UNIQUE NULLS DISTINCT` syntax used by Langflow's database schema.
+Langflow requires PostgreSQL 15 or higher when configured to use PostgreSQL.
+
+To resolve this issue, upgrade your PostgreSQL instance to version 15 or higher, and then restart Langflow.
+
 ### An API key must be passed as query or header
 
 The following error can occur when attempting to sign up on the Langflow sign in page: `An API key must be passed as query or header`.
